# CSA_Tasks

CSA/Task1/Code/: CMakeLists.txt  container.cpp  container.h  functional.cpp  functional.h  language.cpp  language.h  main.cpp  object_oriented.cpp  object_oriented.h  procedural.cpp  procedural.h  rnd.h
CSA/Task1/Explanatory note/1_task description/: My numbers of tasks.txt  variant.cpp
CSA/Task1/Explanatory note/2_structure description/: Structure.txt
CSA/Task1/Explanatory note/3_report/: report.txt
Task2/Code/: CMakeLists.txt  container.cpp  container.h  functional.cpp  functional.h  language.cpp  language.h  main.cpp  object_oriented.cpp  object_oriented.h  procedural.cpp  procedural.h  rnd.h
Task2/Explanatory note/: how_to_launch.txt
Task2/Tests/In/: In1.txt  In2.txt  Input format.txt
Task3/Code/: container.py  functional.py  language.py  languageNew.py  main.py  objectOriented.py  procedural.py
Task3/Explanatory note/: how_to_launch_prog.txt
Task3/Tests/In/: In1.txt  In2.txt  Input format.txt
Task5/code/: main.cpp
Task5/tests/alph/: a.txt
